# irg-reference

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ecosystem.config.cjs  irg-flow-diagram.md  package.json
_docs/: Citation_Application.md  EIE-questions.md  Epistemic_Integrity_Evaluations.md  Iterative_Reasoning_Graphs.md
api-impl-js/: IRG_API.md  package.json
api-impl-js/api/: irg-api-server.js
api-impl-js/bench/: citation-bench.js  citation-eval-set.json
api-impl-js/graphs/: fact-check-pipeline-graph-linear.js  fact-check-pipeline-graph.js  irg-graph-external-facts.js  irg-graph-linear-simple.js  irg-graph-linear.js  irg-graph-reg-e-adjudication.js  irg-graph.js
api-impl-js/scripts/: fact-store-sweep.js  fact-store.js
api-impl-js/test/: test-assessor-node.js  test-citation-apply-node.js  test-citation-apply.js  test-citation-bench.js  test-citation-conformance.js  test-citation-pipeline-e2e.js  test-citation-quality-node.js  test-citation-quality.js  test-claim-index.js  test-cli.js  (+23 more)
api-impl-py/: README.md
api-impl-rs/: Cargo.toml  README.md
api-impl-rs/src/: lib.rs
api-impl-rs/src/citations/: apply.rs  build_citable_set.rs  citation_format.rs  citation_id.rs  mod.rs  quality_metrics.rs  types.rs
api-impl-rs/src/external_fact_check/: claimreview.rs  mod.rs
api-impl-rs/tests/: conformance.rs  units.rs
conformance/: README.md
shared/: runtime-defaults.json
trace-navigator/: .gitignore  README.md  jest.config.js  middleware.ts  next.config.ts  package.json  test_diff.js  test_yaml_parser.js
(+206 files in other folders)
