[package]
name = "irg"
version = "0.1.0"
edition = "2021"
description = "Rust port of the IRG citation conformance core (Rosetta-Stone reference implementation)"
license = "CC-BY-SA-4.0"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# (none beyond the above — the conformance tests reuse serde_json)
